intial commit after fork

--- a/index.html
+++ b/index.html
@@ -3,20 +3,50 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>AngularJS, TypeScript & SystemJS</title>
+    <title>My App</title>
     <base href="/">
 </head>
 
-<body>
-    <h1 ng-controller="MainController as vm">
-        {{vm.message}}
-    </h1>
-
+<body ng-controller="MaguireController as magCtrl">
+    <div class="container">
+        <h1>{{magCtrl.title}}</h1>
+        <div class="basic-info">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="btn-group">
+                        <button class="btn btn-default" ng-click="magCtrl.clockIn()" ng-disabled="magCtrl.clockedIn">Clock in</button>
+                        <button class="btn btn-default" ng-click="magCtrl.clockOut()" ng-disabled="!magCtrl.clockedIn">Clock out</button>
+                    </div>
+                    <label for="current-task-input">Task</label>
+                    <input id="current-task-input" type="text" ng-model="magCtrl.currentTask" maxlength="30" />
+                    <label for="last-clocked-in-time" ng-if="magCtrl.clockedIn">Last clocked in time </label>
+                    <span id="last-clocked-in-time" ng-bind="magCtrl.lastClockedInTime" ng-if="magCtrl.clockedIn"></span>
+                    <label for="last-clocked-out-time" ng-if="!magCtrl.clockedIn">Last clocked out time:</label>
+                    <span id="last-clocked-out-time" ng-bind="magCtrl.lastClockedOutTime" ng-if="!magCtrl.clockedIn"></span>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <daily-times day-data="magCtrl.dayData"></daily-times>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <weekly-times week-data="magCtrl.weekData"></weekly-times>
+            </div>
+        </div>
+    </div>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="index.less.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://use.fontawesome.com/6f663e586d.js"></script>
     <script src="node_modules/systemjs/dist/system.src.js"></script>
     <script src="config.js"></script>
     <script>
-        System
-            .import('app/boot');
+    System
+        .import('app/boot');
     </script>
 </body>
 
